--- a/CSS/styles/general.css
+++ b/CSS/styles/general.css
@@ -3,4 +3,9 @@
 Selector universal*/
 * {
   margin: 0px;
+  /*Agregando tipo grafia*/
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
