--- a/SASS/styles/styles.sass
+++ b/SASS/styles/styles.sass
@@ -1,7 +1,17 @@
-/*
-  hola mundo
-$base-color: blue
+@import './components/_general.sass'
+
 #inicial
   color: $base-color
   p
     background-color: red
+
+.columna-centrada
+  @include columna(center, center)
+
+.columna-top
+  @include columna(center, top)
+
+.blogs
+  @include grid(1fr 1fr 1fr)
+  .blog
+    @include columna(center, flex-start)
